--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="video-card">
                 <h3>Snow Evening</h3>
                 <video controls>
-                    <source src="snow.evening.mp4" type="video/mp4">
+                    <source src="videos/snow.evening.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">1,237 KB · MP4</div>
@@ -76,7 +76,7 @@
             <div class="video-card">
                 <h3>Rain Night</h3>
                 <video controls>
-                    <source src="rain.night.mp4" type="video/mp4">
+                    <source src="videos/rain.night.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">3,908 KB · MP4</div>
@@ -85,7 +85,7 @@
             <div class="video-card">
                 <h3>Snow Morning (1)</h3>
                 <video controls>
-                    <source src="SNOW MORNING (1).mp4" type="video/mp4">
+                    <source src="videos/SNOW MORNING (1).mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">637 KB · MP4</div>
@@ -94,7 +94,7 @@
             <div class="video-card">
                 <h3>Spring Evening</h3>
                 <video controls>
-                    <source src="spring evening.mp4" type="video/mp4">
+                    <source src="videos/spring evening.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">1,908 KB · MP4</div>
@@ -103,7 +103,7 @@
             <div class="video-card">
                 <h3>Spring Afternoon</h3>
                 <video controls>
-                    <source src="spring afternoon.mp4" type="video/mp4">
+                    <source src="videos/spring afternoon.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">1,300 KB · MP4</div>
@@ -112,7 +112,7 @@
             <div class="video-card">
                 <h3>Marine</h3>
                 <video controls>
-                    <source src="marine.mp4" type="video/mp4">
+                    <source src="videos/marine.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">3,184 KB · MP4</div>
@@ -121,7 +121,7 @@
             <div class="video-card">
                 <h3>Spring Morning</h3>
                 <video controls>
-                    <source src="SPRING MORNING.mp4" type="video/mp4">
+                    <source src="videos/SPRING MORNING.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">5,304 KB · MP4</div>
@@ -130,7 +130,7 @@
             <div class="video-card">
                 <h3>Spring Night</h3>
                 <video controls>
-                    <source src="SPRING NIGHT.mp4" type="video/mp4">
+                    <source src="videos/SPRING NIGHT.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">2,581 KB · MP4</div>
@@ -144,7 +144,7 @@
             <div class="video-card">
                 <h3>Summer Afternoon</h3>
                 <video controls>
-                    <source src="SUMMER AFTERNOON.mp4" type="video/mp4">
+                    <source src="videos/SUMMER AFTERNOON.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">1,222 KB · MP4</div>
@@ -153,7 +153,7 @@
             <div class="video-card">
                 <h3>Summer Evening</h3>
                 <video controls>
-                    <source src="summer evening.mp4" type="video/mp4">
+                    <source src="videos/summer evening.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">1,303 KB · MP4</div>
@@ -162,7 +162,7 @@
             <div class="video-card">
                 <h3>Snow Afternoon</h3>
                 <video controls>
-                    <source src="snow afternoon.mp4" type="video/mp4">
+                    <source src="videos/snow afternoon.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">947 KB · MP4</div>
@@ -171,7 +171,7 @@
             <div class="video-card">
                 <h3>Rain Evening</h3>
                 <video controls>
-                    <source src="rain evening.mp4" type="video/mp4">
+                    <source src="videos/rain evening.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">2,153 KB · MP4</div>
@@ -180,7 +180,7 @@
             <div class="video-card">
                 <h3>Rain Morning</h3>
                 <video controls>
-                    <source src="rain morning.mp4" type="video/mp4">
+                    <source src="videos/rain morning.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">2,022 KB · MP4</div>
@@ -189,7 +189,7 @@
             <div class="video-card">
                 <h3>Rain Afternoon</h3>
                 <video controls>
-                    <source src="rain afternoon.mp4" type="video/mp4">
+                    <source src="videos/rain afternoon.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">5,841 KB · MP4</div>
@@ -198,7 +198,7 @@
             <div class="video-card">
                 <h3>Snow Night</h3>
                 <video controls>
-                    <source src="snow night.mp4" type="video/mp4">
+                    <source src="videos/snow night.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">1,088 KB · MP4</div>
@@ -207,7 +207,7 @@
             <div class="video-card">
                 <h3>Summer Night</h3>
                 <video controls>
-                    <source src="SUMMER NIGHT.mp4" type="video/mp4">
+                    <source src="videos/SUMMER NIGHT.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">1,237 KB · MP4</div>
@@ -216,7 +216,7 @@
             <div class="video-card">
                 <h3>Summer Morning</h3>
                 <video controls>
-                    <source src="SUMMER MORNING.mp4" type="video/mp4">
+                    <source src="videos/SUMMER MORNING.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="file-info">1,287 KB · MP4</div>
